refactored the layers
